- Fixed bug #30096 (gmmktime does not return the corrent time). - Re-implemented mktime and gmmktime with new date time library. - Added testcase for bug #30096, updated test cases for E_STRICT warning of   is_dst parameter usage for mktime/gmmktime.