ext/standard/tests/time/bug27719.phpt
@@ -1,7 +1,9 @@
 --TEST--
 Bug #27719: mktime returns incorrect timestamp for dst days
+--INI--
+error_reporting=2047
 --FILE--
-<?php /* $Id: bug27719.phpt,v 1.5 2005/06/30 21:38:06 derick Exp $ */
+<?php /* $Id: bug27719.phpt,v 1.6 2005/07/03 14:27:31 derick Exp $ */
 	putenv("TZ=EST");  // No DST
 	$a = mktime(0, 0, 0, 4, 4, 2004, 0);
 	$b = mktime(0, 0, 0, 4, 4, 2004, 1);
